--- a/.github/workflows/valkey.yml
+++ b/.github/workflows/valkey.yml
@@ -1,4 +1,4 @@
-name: build(redis)
+name: build(valkey)
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -11,26 +11,26 @@ on:
       - synchronize
       - reopened
     paths:
-      - 'redis/**'
+      - 'valkey/**'
   push:
     branches:
       - main
     paths:
-      - 'redis/**'
+      - 'valkey/**'
   workflow_dispatch:
   schedule:
     - cron: '0 0 3 * *'
 
 jobs:
-  redis:
+  valkey:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        name: ['redis']
+        name: ['valkey']
         suite: ['debian', 'alpine']
-        version: ['6.2', '7.0', '7.2', '7.4', '7.4-rc']
-        latest_version: ['7.4']
+        version: ['7.2', '8.0', '8.1', '9.0']
+        latest_version: ['9.0']
 
     steps:
       - name: Checkout ${{ matrix.name }}
@@ -56,7 +56,7 @@ jobs:
             echo "build=false" >> $GITHUB_ENV
             exit 0
           fi
-          full_version=$(grep -m1 -oP "ENV REDIS_VERSION \K.*" ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/Dockerfile)
+          full_version=$(grep -m1 -oP "ENV VALKEY_VERSION \K.*" ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/Dockerfile)
           echo "full_version=${full_version}" >> $GITHUB_ENV
 
           version=${{ matrix.version }}
@@ -69,8 +69,8 @@ jobs:
               full_image_tag=${full_version}-trixie
               ;;
             alpine)
-              image_tag=${version}-alpine3.21
-              full_image_tag=${full_version}-alpine3.21
+              image_tag=${version}-alpine3.23
+              full_image_tag=${full_version}-alpine3.23
               ;;
           esac
 
@@ -102,14 +102,14 @@ jobs:
           full_version="${{ env.full_version }}"
           minor_version=$(echo "$full_version" | cut -d'.' -f1-2)
           major_version=$(echo "$full_version" | cut -d'.' -f1)
-          repo="ghcr.io/${{ github.repository_owner }}/redis"
+          repo="ghcr.io/${{ github.repository_owner }}/valkey"
           suite="${{ matrix.suite }}"
           version="${{ matrix.version }}"
           latest_version="${{ matrix.latest_version }}"
 
           crane index append -t "$repo:$full_version-$suite" \
             -m "$repo:$full_version-$suite-loong64" \
-            -m "redis:$full_version-$suite"
+            -m "valkey:$full_version-$suite"
           crane cp "$repo:$full_version-$suite" "$repo:$minor_version-$suite"
 
           case "$suite" in
@@ -121,8 +121,8 @@ jobs:
               fi
               ;;
             alpine)
-              crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine3.21"
-              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine3.21"
+              crane cp "$repo:$full_version-$suite" "$repo:$full_version-alpine3.23"
+              crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine3.23"
               if [ "$version" = "$latest_version" ]; then
                 crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
                 crane cp "$repo:$full_version-$suite" "$repo:alpine"
